
NEW FEATURES

* "between" type for conditional formatting values in some interval.

* colWidths parameter added to write.xlsx for auto column widths.

* freezePane parameter handling added to write.xlsx.

* visible parameter to addWorksheet to hide worksheets.

* sheetVisible function to get and assign worksheet visibility state "hidden"/"visible"


BUG FIXES

* keepNA paramter added to write.xlsx. Passed to writeData/writeDataTable



openxlsx 3.0.1
----------------------------------------------------------------

NEW FEATURES

* improved performance of read.xlsx and loadWorkbook

* writeFormula funciton added to write cell formulas. Also columns
  with class "formula" are written as cell formulas similar how column
  classes determine cell styling

* Functionality to write comments and maintain comments with loadWorkbook

* check.names argument added read.xlsx to make syntactically valid variable names

* loadWorkbook maintains cell indents

* namedRegion parameter added to read.xlsx to read a named region.

* getNamed regions to return names of named regions in a workbook

* getSheetNames to get worksheet names within an xlsx file.


BUG FIXES

* convertToDateTime now handles NA values

* read.xlsx rows bug fixed where non-consecutive cells were skipped.

* convertToDate & convertToDateTime now handle NA values.

* out of bounds worksheet fixed for libre office xlsx files.

* loadWorkbook now maintains chartSheets 



openxlsx 2.4.0
----------------------------------------------------------------

NEW FEATURES

* stackable cell styling

* getDateOrigin function to return the date origin used internally by the xlsx file to pass to
  convertToDate
  
* Auto-detection of date cells. Cells that "look" like dates will be converted to dates when reading from file.

* read.xlsx.Workbook to read from workbook objects

* colIndex, rowIndex added to read.xlsx to only read specified rows and columns

* Excel slicers now maintained by loadWorkbook
