@@ -32,6 +32,7 @@ export(loadWorkbook)
 export(mergeCells)
 export(modifyBaseFont)
 export(openXL)
+export(pageBreak)
 export(pageSetup)
 export(read.xlsx)
 export(readWorkbook)
